# Constructio-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api-gateway-config.yaml  cloudbuild.yaml  gateway_smoke_test.py  gcp_setup.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: architecture.md  cicd.md  deployment.md  gcp_setup.md  service-account.md
scripts/: deploy-api-gateway.sh  deploy-cloudrun.ps1  deploy-cloudrun.sh
src/api/: app.py  config.py  dependencies.py  logger.py  ports.py  specification.yaml
src/api/controllers/: __init__.py  generator_controller.py
src/api/interfaces/: repositories.py
src/api/mcp/: __init__.py  app.py  proxy.py
src/api/mcp/tools/: __init__.py
src/api/mcp_tools/: __init__.py  main.py
src/api/middleware/: __init__.py  error_handler.py
src/api/models/dtos/: __init__.py  common.py  generator_requests.py  generator_responses.py
src/api/repositories/: base.py  firestore.py  memory.py  storage.py
src/api/scripts/: seed_firestore_generator.py
src/api/services/: __init__.py  generator_service.py
src/api/shared/: __init__.py  decorators.py  exceptions.py  time.py  utils.py
tests/: conftest.py  gateway_smoke_test.py
tests/api/: test_generators_create.py  test_generators_delete.py  test_generators_filters.py  test_generators_get.py  test_generators_list.py  test_generators_validation.py
tests/mcp/: test_tools_create_generator.py  test_tools_delete_generator.py  test_tools_get_generator.py  test_tools_list.py  test_tools_list_generators.py
